Fix overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,6 +77,11 @@
   border-color: hsl(var(--border));
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   background-color: hsl(var(--background));
   color: hsl(var(--foreground));
